# ObsidianEcho-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-dev.yaml  ci.yaml  cleanup.yaml
app/: main.py
app/agents/: chat.py  research.py
app/api/middleware/: __init__.py  auth.py  request_id.py
app/api/routes/: __init__.py  chat.py  health.py  history.py  research.py  tasks.py
app/core/: config.py  logging.py  security.py
app/models/: __init__.py  auth.py  chat.py  history.py  providers.py  research.py  tasks.py
app/services/: __init__.py  history.py  providers.py  rate_limiter.py  tasks.py
app/utils/: generate_key.py
config/: example.yaml
docs/: FEATURES.md  PROJECT_OVERVIEW.md  STORIES.md
tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_history.py  test_logging.py  test_providers.py  test_rate_limiter.py  test_request_id.py  test_research.py  test_security.py  test_tasks.py
